--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,54 @@ body{
     height: 100%;
 }
 
+.center {
+    max-width: 120rem;
+    display: flex;
+    justify-content: space-between !important;
+}
+
+.nav-container {
+    width: 100%;
+    display: flex;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.main-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    border: 2px solid red;
+}
+
 .navbar{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    height: 5rem;
+    justify-content: center;
     box-shadow: 0px 10px 40px 1px rgba(0,0,0,0.35);
     background-color: #e3f2fd;
     font-size: 1.8rem;
+}
+
+.navbar-brand {
+    margin-left: 1.7rem;
+}
+
+ul li {
+    display: flex;
+    align-items: center;
+}
+
+ul li:last-of-type {
+    margin-right: 1.5rem;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
 }
 
 .title{
@@ -36,8 +75,12 @@ body{
     font-size: 3.5rem;
 }
 
-.degrees .location{
+.degrees, .location{
     font-family: 'Roboto', sans-serif;
+}
+
+.degrees:hover {
+    border-bottom: 2px solid #889197;
 }
 
 .location{
@@ -46,23 +89,32 @@ body{
 }
 
 .card-container {
-    height: 45rem;
-    margin-top: 2rem;
+    height: 46rem;
+    width: 110rem;
     display: flex;
-    justify-content: space-evenly;
     align-items: flex-start;
+    margin: 1rem auto;
+    border: 2px solid red;
 }
 
 .card {
     box-shadow: 0px 10px 40px 1px rgba(0,0,0,0.35);
     background-color: #e3f2fd;
+    margin-right: 1rem;
+}
+
+.card:last-of-type {
+    margin-right: 0;
+}
+
+.card-img {
+    background-color: #889197;
 }
 
 .complemmentary-img {
     max-height: 100%;
 }
 
-.test {
-    display: flex;
-    align-items: flex-end;
+.container {
+    border: 2px solid black;
 }
