--- a/styles.css
+++ b/styles.css
@@ -8,39 +8,39 @@ colors {
 }
 */
 
-html{
+html {
     font-size: 62.5%;
     height: 100%;
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
     background-color: white;
     height: 100%;
 }
 
-.navbar{
+.navbar {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 5rem;
-    box-shadow: 0px 10px 40px 1px rgba(0,0,0,0.35);
+    box-shadow: 0px 10px 40px 1px rgba(0, 0, 0, 0.35);
     background-color: #e3f2fd;
     font-size: 1.8rem;
 }
 
-.title{
-    font-family: 'Oswald', sans-serif;
+.title {
+    font-family: "Oswald", sans-serif;
     font-size: 3.5rem;
 }
 
-.degrees .location{
-    font-family: 'Roboto', sans-serif;
+.degrees .location {
+    font-family: "Roboto", sans-serif;
 }
 
-.location{
+.location {
     font-weight: 700;
     margin-right: 0;
 }
@@ -54,7 +54,7 @@ body{
 .card {
     width: 33%;
     margin: 1.3rem;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.30);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
     background-color: #e3f2fd;
 }
 
@@ -78,7 +78,7 @@ body{
 }
 
 .forecast:hover {
-    box-shadow: 18px 18px 20px 0px rgba(0,0,0,0.30);
+    box-shadow: 18px 18px 20px 0px rgba(0, 0, 0, 0.3);
     transform: translate(-1px, -3px);
 }
 
