--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,13 @@ body {
     align-items: center;
     width: 100%;
     height: 5rem;
-    box-shadow: 0px 10px 40px 1px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
     background-color: #e3f2fd;
     font-size: 1.8rem;
+}
+
+a:hover {
+    font-weight: 500;
 }
 
 .title {
@@ -46,7 +50,7 @@ body {
 }
 
 .card-container {
-    height: 45rem;
+    height: 80vh;
     margin-top: 2rem;
     display: flex;
 }
@@ -54,31 +58,34 @@ body {
 .card {
     width: 33%;
     margin: 1.3rem;
-    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
     background-color: #e3f2fd;
-}
-
-.forecast-container {
-    display: flex;
-    flex-direction: column;
-    height: 45rem;
 }
 
 .containers {
     display: flex;
 }
-
-.main-card {
-    border: 1px solid black;
+.forecast-container {
+    border: 2px solid red;
+    z-index: 99;
+    width: 80%;
 }
 
-.forecast {
-    transition: all 0.1s ease;
+.main-card {
+    padding: 0 !important;
+    width: 93%;
+    height: 95%;
+}
+
+.forecast,
+.main-card {
+    transition: all 0.4s ease;
     text-align: center;
 }
 
-.forecast:hover {
-    box-shadow: 18px 18px 20px 0px rgba(0, 0, 0, 0.3);
+.forecast:hover,
+.main-card:hover {
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.3);
+    border: 2px solid black;
     transform: translate(-1px, -3px);
 }
 
@@ -88,7 +95,48 @@ body {
     margin-top: 1rem;
 }
 
-.forecast-temp {
+.temp {
     text-align: center;
     font-size: 30px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.35);
+}
+
+.weather {
+    background-color: green;
+}
+
+.card-body {
+    padding: 0 !important;
+    height: 10rem;
+    background-color: #a5c3c6;
+}
+
+.card-title {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 3rem;
+    background-color: #849c9f;
+    font-size: 20px;
+}
+
+.current-temp {
+    font-size: 10rem;
+}
+
+.current-date {
+    background-color: #849c9f;
+    height: 5.2rem;
+    font-size: 2.5rem;
+}
+
+.forecast-date {
+    font-size: 1.5rem;
+    background-color: #849c9f;
 }
